--- a/package.xml
+++ b/package.xml
@@ -12,7 +12,7 @@
 
   <build_depend>rclcpp</build_depend>
   <build_depend>rclcpp_components</build_depend>
-  <build_depend>stage</build_depend>
+  <build_depend>Stage</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
@@ -20,7 +20,7 @@
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rclcpp_components</exec_depend>
-  <exec_depend>stage</exec_depend>
+  <exec_depend>Stage</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
