--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,8 @@
   <build_depend>rclcpp_components</build_depend>
   <build_depend>Stage</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
 
@@ -22,6 +24,8 @@
   <exec_depend>rclcpp_components</exec_depend>
   <exec_depend>Stage</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
 
